--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <title>Portfolio </title>
   <script src="https://use.fontawesome.com/0820aae9d6.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-  
-  <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
-<link rel='stylesheet prefetch' href='https://cdn.jsdelivr.net/bootstrap-social/5.1.1/bootstrap-social.css'>
+
+  <link rel="stylesheet prefetch" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet prefetch" href="https://cdn.jsdelivr.net/bootstrap-social/5.1.1/bootstrap-social.css">
 
       <link rel="stylesheet" href="css/style.css">
 
-  
+
 </head>
 
 <body>
@@ -19,50 +19,47 @@
 	<a class="btn" href="#bio">Bio</a>
 	<a type="button" class="btn" href="#portfolio">Portfolio</a>
 	<a type="button" class="btn" href="#contact">Contact</a>
-</div>
+  </div>
 
-
-<body>
 	<div id="page" class="container">
-		<div id='bio' class="text-center">
+		<div id="bio" class="text-center">
 			<h1>Stuart Harris</h1>
-			<img id='tree' class="img-responsive center-block" src='http://gdurl.com/8gie'>
+			<img id="tree" class="img-responsive center-block" src="http://gdurl.com/8gie">
 			<h3><strong>Web Development</strong></h3>
 			<h4>Welcome to my portfolio page. I am working on <strong>full stack web development.</strong> Currently I prefer the "mobile first" principles used in the Bootstrap front-end-framework (I really, really like consistency across devices.) I am also doing some projects in Python and Django. Please feel free to peruse my GitHub profile, which is linked below.<br><strong>Thanks for stopping by!</strong></h4>
 		</div>
-		<div id='portfolio' class="row">
+
+		<div id="portfolio" class="row">
 			<div class="text-center">
 				<h3><strong>Portfolio</strong></h3>
 				<h4><strong>Below are some examples of my work. I'm leaving everything in here for reference. These range from the humble single tribute page I first worked on to more advanced JS pages.</strong></h4>
-				<a class="text-center" href="http://s.codepen.io/SAHarris/full/oYeoLo" class="thumbnail"><img class='img-responsive' id='bfett' src="http://gdurl.com/EV7G" alt="..."></a>
+				<a class="text-center, thumbnail" href="http://s.codepen.io/SAHarris/full/oYeoLo" ><img class="img-responsive" id="bfett" src="http://gdurl.com/EV7G" alt="..."></a>
 				<h4><strong> This was my initial sample page. Very simple HTML and CSS.</strong></h4>
 
-				<a class="text-center" href='http://s.codepen.io/SAHarris/full/MbBrKQ' class="thumbnail"><img class='img-responsive' src="http://gdurl.com/gQu9" alt="..."></a>
+				<a class="text-center, thumbnail" href="http://s.codepen.io/SAHarris/full/MbBrKQ"><img class="img-responsive" src="http://gdurl.com/gQu9" alt="..."></a>
 				<h4><strong>This was a lot more fun. Added in some jQuery to play with APIs</strong></h4>
-				<a class="text-center" href="http://s.codepen.io/SAHarris/full/RodMvK/mVkbGVyNeGbM" class="thumbnail"><img class='img-responsive' src="http://gdurl.com/Rwi6" alt="..."></a>
+				<a class="text-center, thumbnail" href="http://s.codepen.io/SAHarris/full/RodMvK/mVkbGVyNeGbM"><img class="img-responsive" src="http://gdurl.com/Rwi6" alt="..."></a>
 				<h4><strong>This one explored an additional two APIs and a bit more JSON data. This was a lot more enjoyable than the previous projects.</strong></h4>
 			</div>
 		</div>
-		<section id='contact' class="text-center">
+		<section id="contact" class="text-center">
 			<h3><strong>Contact me:</strong></h3>
 
-			<div class='container-fluid text-center'>
+			<div class="container-fluid text-center">
 
-				<a id='github' class="btn btn-social-icon btn-github" href='https://github.com/SAHarris'>
+				<a id="github" class="btn btn-social-icon btn-github" href="https://github.com/SAHarris">
 					<span class="fa fa-github"></span>
 				</a>
 
-				<a id='twitter' class="btn btn-social-icon btn-twitter" href='https://twitter.com/stuartaharris'>
+				<a id="twitter" class="btn btn-social-icon btn-twitter" href="https://twitter.com/stuartaharris">
 					<span class="fa fa-twitter"></span>
 				</a>
 
-				<a id='linkedin' class="btn btn-social-icon btn-linkedin" href='https://www.linkedin.com/in/stuart-harris-03302911'>
+				<a id="linkedin" class="btn btn-social-icon btn-linkedin" href="https://www.linkedin.com/in/stuart-harris-03302911">
 					<span class="fa fa-linkedin"></span>
 				</a>
 			</div>
 		</section>
-</body>
-  
-  
-</body>
+    </div>
+  </body>
 </html>
