--- a/index.html
+++ b/index.html
@@ -33,13 +33,19 @@
 			<div class="text-center">
 				<h3><strong>Portfolio</strong></h3>
 				<h4><strong>Below are some examples of my work. I'm leaving everything in here for reference. These range from the humble single tribute page I first worked on to more advanced JS pages.</strong></h4>
+
 				<a class="text-center, thumbnail" href="http://s.codepen.io/SAHarris/full/oYeoLo" ><img class="img-responsive" id="bfett" src="http://gdurl.com/EV7G" alt="..."></a>
 				<h4><strong> This was my initial sample page. Very simple HTML and CSS.</strong></h4>
 
 				<a class="text-center, thumbnail" href="http://s.codepen.io/SAHarris/full/MbBrKQ"><img class="img-responsive" src="http://gdurl.com/gQu9" alt="..."></a>
 				<h4><strong>This was a lot more fun. Added in some jQuery to play with APIs</strong></h4>
-				<a class="text-center, thumbnail" href="http://s.codepen.io/SAHarris/full/RodMvK/mVkbGVyNeGbM"><img class="img-responsive" src="http://gdurl.com/Rwi6" alt="..."></a>
+
+        <a class="text-center, thumbnail" href="http://s.codepen.io/SAHarris/full/RodMvK/mVkbGVyNeGbM"><img class="img-responsive" src="http://gdurl.com/Rwi6" alt="..."></a>
 				<h4><strong>This one explored an additional two APIs and a bit more JSON data. This was a lot more enjoyable than the previous projects.</strong></h4>
+
+        <a class="text-center, thumbnail" href="http://s.codepen.io/SAHarris/full/JEYXme/"><img class="img-responsive" src="http://gdurl.com/4Dw5" alt="..."></a>
+				<h4><strong>This is a simple Wikipedia article viewer. It is probable not terribly useful, but I learned to enjoy the act of placing a single image and getting a single function from a page.</strong></h4>
+
 			</div>
 		</div>
 		<section id="contact" class="text-center">
