add email address

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <div class="navbar text-center navbar-fixed-top" role="navigation">
-	<a class="btn" href="#bio">Bio</a>
+	<a type="button" class="btn" href="#bio">Bio</a>
 	<a type="button" class="btn" href="#portfolio">Portfolio</a>
 	<a type="button" class="btn" href="#contact">Contact</a>
   </div>
@@ -64,6 +64,7 @@
 				<a id="linkedin" class="btn btn-social-icon btn-linkedin" href="https://www.linkedin.com/in/stuart-harris-03302911">
 					<span class="fa fa-linkedin"></span>
 				</a>
+        <h4><strong>Email me at: hello@stuartaharris.com</strong></h4>
 			</div>
 		</section>
     </div>
