--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				<h4><strong>This one explored an additional two APIs and a bit more JSON data. This was a lot more enjoyable than the previous projects.</strong></h4>
 
         <a class="text-center, thumbnail" href="http://s.codepen.io/SAHarris/full/JEYXme/"><img class="img-responsive" src="http://gdurl.com/4Dw5" alt="..."></a>
-				<h4><strong>This is a simple Wikipedia article viewer. It is probable not terribly useful, but I learned to enjoy the act of placing a single image and getting a single function from a page.</strong></h4>
+				<h4><strong>This is a simple Wikipedia article viewer. It is probably not terribly useful, but I learned to enjoy the act of placing a single image and getting a single function from a page.</strong></h4>
 
 			</div>
 		</div>
