Add calculator project to portfolio

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
         <a class="text-center, thumbnail" href="http://s.codepen.io/SAHarris/full/JEYXme/"><img class="img-responsive" src="http://gdurl.com/4Dw5" alt="..."></a>
 				<h4><strong>This is a simple Wikipedia article viewer. It is probably not too useful, but I learned to enjoy the act of placing a single image and getting a single function from a page.</strong></h4>
 
+        <a class="text-center, thumbnail" href="http://codepen.io/SAHarris/full/bgaPoX/"><img class="img-responsive" src="http://gdurl.com/orGc" alt="..."></a>
+				<h4><strong>This is a simple Javascript calculator. The code is entirely Bootstrap over jQuery. </strong></a>
+
 			</div>
 		</div>
 		<section id="contact" class="text-center">
