--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<h4><strong>This is a simple Wikipedia article viewer. It is probably not too useful, but I learned to enjoy the act of placing a single image and getting a single function from a page.</strong></h4>
 
         <a class="text-center, thumbnail" href="http://codepen.io/SAHarris/full/bgaPoX/"><img class="img-responsive" src="http://gdurl.com/orGc" alt="..."></a>
-				<h4><strong>This is a simple Javascript calculator. The code is entirely Bootstrap over jQuery. </strong></a>
+				<h4><strong>This is a simple Javascript calculator. The code is entirely Bootstrap over jQuery. </strong></h4>
 
 			</div>
 		</div>
