add pomodoro project

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
         <a class="text-center, thumbnail" href="http://codepen.io/SAHarris/full/bgaPoX/"><img class="img-responsive" src="http://gdurl.com/orGc" alt="..."></a>
 				<h4><strong>This is a simple Javascript calculator. The code is entirely Bootstrap over jQuery. </strong></h4>
 
+        <a class="text-center, thumbnail" href="http://codepen.io/SAHarris/full/PWrKZR/"><img class="img-responsive" src="http://gdurl.com/NRWC" alt="..."></a>
+        <h4><strong>My own pomodoro timer. I love breaking my work time into managable chunks, if you use Kanbanflow.com- you'll recognize the format. </strong></h4>
+
 			</div>
 		</div>
 		<section id="contact" class="text-center">
