add kanbanflow.com link in pomodoro description

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<h4><strong>This is a simple Javascript calculator. The code is entirely Bootstrap over jQuery. </strong></h4>
 
         <a class="text-center, thumbnail" href="http://codepen.io/SAHarris/full/PWrKZR/"><img class="img-responsive" src="http://gdurl.com/NRWC" alt="..."></a>
-        <h4><strong>My own pomodoro timer. I love breaking my work time into managable chunks, if you use Kanbanflow.com- you'll recognize the format. </strong></h4>
+        <h4><strong>My own pomodoro timer. I love breaking my work time into managable chunks, if you use <a  href= "www.kanbanflow.com">Kanbanflow.com</a>- you'll recognize the format. </strong></h4>
 
 			</div>
 		</div>
