add JS, JQ and bootstrap links

--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
 			<h1>Stuart Harris</h1>
 			<img id="tree" class="img-responsive center-block" src="http://gdurl.com/8gie">
 			<h3><strong>Web Development</strong></h3>
-			<h4>Welcome to my portfolio page. I am working on <strong>full stack web development.</strong> Currently I prefer the "mobile first" principles used in the Bootstrap front-end-framework (I really, really like consistency across devices.) I am also doing some projects in Python and Django. Please feel free to peruse my GitHub profile, which is linked below.<br><strong>Thanks for stopping by!</strong></h4>
+			<h4>Welcome to my portfolio page. I am working on <strong>full stack web development.</strong> Currently I prefer the "mobile first" principles used in the <a href = "http://getbootstrap.com/"><strong>Bootstrap</strong></a> front-end-framework (I really, really like consistency across devices.) I am also doing some projects in Python and Django. Please feel free to peruse my GitHub profile, which is linked below.<br><strong>Thanks for stopping by!</strong></h4>
 		</div>
 
 		<div id="portfolio" class="row">
 			<div class="text-center">
 				<h3><strong>Portfolio</strong></h3>
-				<h4><strong>Below are some examples of my work. I'm leaving everything in here for reference. These range from the humble single tribute page I first worked on to more advanced JS pages.</strong></h4>
+				<h4><strong>Below are some examples of my work. I'm leaving everything in here for reference. These range from the humble single tribute page I first worked on to more advanced <a href = "https://www.javascript.com/">JavaScript</a> pages.</strong></h4>
 
 				<a class="text-center, thumbnail" href="http://s.codepen.io/SAHarris/full/oYeoLo" ><img class="img-responsive" id="bfett" src="http://gdurl.com/EV7G" alt="..."></a>
 				<h4><strong> This was my initial sample page. Very simple HTML and CSS.</strong></h4>
 
 				<a class="text-center, thumbnail" href="http://s.codepen.io/SAHarris/full/MbBrKQ"><img class="img-responsive" src="http://gdurl.com/gQu9" alt="..."></a>
-				<h4><strong>This was a lot more fun. Added in some jQuery to play with APIs</strong></h4>
+				<h4><strong>This was a lot more fun. Added in some <a href = "https://jquery.com/">jQuery</a> to play with APIs</strong></h4>
 
         <a class="text-center, thumbnail" href="http://s.codepen.io/SAHarris/full/RodMvK/mVkbGVyNeGbM"><img class="img-responsive" src="http://gdurl.com/Rwi6" alt="..."></a>
 				<h4><strong>This one explored an additional two APIs and a bit more JSON data. This was a lot more enjoyable than the previous projects.</strong></h4>
@@ -47,7 +47,7 @@
 				<h4><strong>This is a simple Wikipedia article viewer. It is probably not too useful, but I learned to enjoy the act of placing a single image and getting a single function from a page.</strong></h4>
 
         <a class="text-center, thumbnail" href="http://codepen.io/SAHarris/full/bgaPoX/"><img class="img-responsive" src="http://gdurl.com/orGc" alt="..."></a>
-				<h4><strong>This is a simple Javascript calculator. The code is entirely Bootstrap over jQuery. </strong></h4>
+				<h4><strong>This is a simple <a href = "https://www.javascript.com/">JavaScript</a> calculator. The code is entirely <a href = "http://getbootstrap.com/">Bootstrap</a> over <a href = "https://jquery.com/">jQuery</a>. </strong></h4>
 
         <a class="text-center, thumbnail" href="http://codepen.io/SAHarris/full/PWrKZR/"><img class="img-responsive" src="http://gdurl.com/NRWC" alt="..."></a>
         <h4><strong>My own pomodoro timer. I love breaking my work time into manageable chunks, if you use <a  href= "www.kanbanflow.com">Kanbanflow.com</a>- you'll recognize the format. </strong></h4>
