--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h4><strong>My own pomodoro timer. I love breaking my work time into manageable chunks, if you use <a  href= "www.kanbanflow.com">Kanbanflow.com</a>- you'll recognize the format. </strong></h4>
 
         <a class="text-center, thumbnail" href="http://codepen.io/SAHarris/full/NjzmoE/"><img class="img-responsive" src="##" alt="..."></a>
-        <h4><strong>This is my Simon game. This is based on the classic 1980's electronic game. I coded this in <a href = "http://getbootstrap.com/">Bootstrap</a> and the functionality is all <a href = "https://www.javascript.com/">JavaScript,</a><a href = "https://jquery.com/">jQuery,</a> and CSS.</strong></h4>
+        <h4><strong>This is my Simon game. This is based on the classic 1980's electronic game. I wrote this in <a href = "http://getbootstrap.com/">Bootstrap</a> and the functionality is all <a href = "https://www.javascript.com/">JavaScript,</a><a href = "https://jquery.com/">jQuery,</a> and CSS.</strong></h4>
 
 			</div>
 		</div>
