--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html >
 <head>
   <meta charset="UTF-8">
-  <title>Portfolio </title>
+  <title>Stuart Harris' Portfolio Site </title>
   <script src="https://use.fontawesome.com/0820aae9d6.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
